fix text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ h2 {
     position: -webkit-sticky;
     position: sticky;
     top: 4em;
+    text-align: left;
     z-index: 999;
 }
 
